--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="layout">
         <!--sidebar-->
         <div class="navbar left-sidebar">
-            <div class="nav-items logo twitter-logo"><i class="fa-brands fa-x-twitter" style="color: #030408;"></i></a></div>
             <ul>
+                <li class="nav-items logo"><a href="#"><i class="fa-brands fa-x-twitter" style="color: #030408;"></i></a></li>
                 <li class="nav-items active-page"><a href="#"><i class="fars fa-solid fa-house" style="color: #030408;"></i>Home</a></li>
                 <li class="nav-items"><a href="#"><i class="fars fa-solid fa-magnifying-glass far " aria-hidden="true" style="color: #030408;"></i>Explore</a></li>
                 <li class="nav-items"><a href="#"><i class=" fars far fa-bell" aria-hidden="true" style="color: #030408;"></i>Notifications</a></li>
